[tool.poetry]
name = "mock_git_dep"
version = "0.1.0"
description = "Test exporting poetry with dependencies and not"
authors = ["Indico Data <engineering@indicodata.ai>"]
packages = [ {include = "mock_git"}]

[tool.poetry.dependencies]
python = "~3.10"
pytest = {version = "^6.2.4", optional = true}

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
